force-app/main/default/objects/For_Heap_Size__c/For_Heap_Size__c.object-meta.xml
<CustomObject>
    <label>For Heap Size</label>
    <nameField>
        <label>For Heap Size Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForHeapSizes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>