force-app/main/default/objects/For_Heap_Size__c/fields/First__c.field-meta.xml
<CustomField>
    <fullName>First__c</fullName>
    <label>First</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>