force-app/main/default/objects/For_Heap_Size__c/fields/Fourth__c.field-meta.xml
<CustomField>
    <fullName>Fourth__c</fullName>
    <label>Fourth</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>