force-app/main/default/objects/For_Heap_Size__c/fields/Second__c.field-meta.xml
<CustomField>
    <fullName>Second__c</fullName>
    <label>Second</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>