force-app/main/default/objects/For_Heap_Size__c/fields/Third__c.field-meta.xml
<CustomField>
    <fullName>Third__c</fullName>
    <label>Third</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>